# dbmig-cpp

./: README  README.md  TODO  bootstrap.sh  cleanup.sh  configure.ac
src/: Makefile.am
src/dbmig/: Makefile.am  check.cpp  console_util.cpp  console_util.hpp  dbmig.cpp  migrate.cpp  override_version.cpp  services.hpp  show.cpp
src/dbmig/.deps/: dbmig-check.Po  dbmig-console_util.Po  dbmig-dbmig.Po  dbmig-migrate.Po  dbmig-override_version.Po  dbmig-show.Po
src/libdbmig/: Makefile.am  changelog.cpp  changelog.hpp  changelog_entry.hpp  changelog_table.cpp  changelog_table.hpp  check.cpp  check.hpp  db_specific.cpp  db_specific.hpp  diff.hpp  exception.hpp  filename_match.hpp  getline.hpp  hash.hpp  migrate.cpp  migrate.hpp  repository.cpp  repository.hpp  script_action.cpp  script_action.hpp  script_dir.cpp  script_dir.hpp  script_stream.cpp  script_stream.hpp  semantic_version.hpp  semver_compare.hpp  statement_buffer.hpp  time.cpp  time.hpp
src/libdbmig/.deps/: libdbmig_a-changelog.Po  libdbmig_la-changelog.Plo  libdbmig_la-changelog_table.Plo  libdbmig_la-check.Plo  libdbmig_la-db_specific.Plo  libdbmig_la-diff.Plo  libdbmig_la-migrate.Plo  libdbmig_la-repository.Plo  libdbmig_la-script_action.Plo  libdbmig_la-script_dir.Plo  libdbmig_la-script_runner.Plo  libdbmig_la-script_stream.Plo  libdbmig_la-time.Plo
src/libdbmigtest/: Makefile.am  diff_test.cpp  pair_special.hpp  repository_test.cpp  script_dir_test.cpp  script_stream_test.cpp  semantic_version_test.cpp
src/libdbmigtest/.deps/: diff_test.Po  libdbmigtest-repository_test.Po  repository_test.Po  script_dir_test.Po  script_stream_test.Po
src/libdbmigtest/data/: regularfile.txt
src/libdbmigtest/data/repo1/install/1.0.0/: 1.0.0+script.0001_install.sql
src/libdbmigtest/data/repo1/upgrade/1.0.0/: 0002_more_fields.sql
src/libdbmigtest/data/repo1/upgrade/1.0.1/: 0001_emergency_shoe_size_add.sql
src/libdbmigtest/data/repo1/upgrade/2.0.0/: 0001_strategic_shoe_sizes.sql  0002_shoe_size_tactical_migration.sql
src/libdbmigtest/data/repo4/install/2.0.0/: 2.0.0+script.0001_install.sql
src/libdbmigtest/data/repo4/install/2.44.2/: 2.44.2+script.0057_install.sql
src/libdbmigtest/data/repo4/upgrade/2.44.3/: 0001_foo.sql  0002_bar.sql
